--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-git+https://github.com/pytorch/ignite
-torch
-numpy==1.15.2
+pytorch-ignite==0.1.2
+torch==1.0.1.post2
+numpy==1.16.1
 torchtext==0.3.1
-six==1.11.0
+six==1.10.0
